syntax = "proto3";
package api;
option go_package = ".;api";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service API {
  rpc HostInfo(google.protobuf.Empty) returns (HostInfoReply) {}
  rpc UsageStats(stream google.protobuf.Empty)
      returns (stream UsageStatsReply) {}
  rpc JobProcess(JobTask) returns (stream JobStatus) {}
  rpc StopJobProcess(JobTask) returns (google.protobuf.Empty) {}
  rpc Capacity(stream google.protobuf.Empty) returns (stream CapacityInfo) {}
}

message JobTask {
  enum JobTaskCode {
    Stop = 0;
    Start = 1;
  }
  uint64 id = 1;
  uint64 build_id = 2;
  JobTaskCode code = 3;
  repeated string commands = 4;
  string image = 5;
  repeated string env = 6;
  string url = 7;
  string credentials = 8;
  string provider = 9;
  string commitSHA = 10;
  string repo = 11;
  uint32 priority = 12;
  google.protobuf.Timestamp start_time = 13;
  google.protobuf.Timestamp end_time = 14;
}

message JobStatus {
  enum JobStatusCode {
    Running = 0;
    Failing = 1;
    Passing = 2;
    Streaming = 3;
  }
  uint64 id = 1;
  uint64 build_id = 2;
  bytes content = 3;
  JobStatusCode code = 4;
}

message HostInfoReply {
  string id = 1;
  string addr = 2;
  string hostname = 3;
  uint64 uptime = 4;
  uint64 bootTime = 5;
  uint64 procs = 6;
  string os = 7;
  string platform = 8;
  string platformFamily = 9;
  string platformVersion = 10;
  string kernelVersion = 11;
  string kernelArch = 12;
  string virtualizationSystem = 13;
  string virtualizationRole = 14;
  string hostID = 15;
  uint64 maxConcurrency = 16;
}

message UsageStatsReply {
  int32 cpu = 1;
  int32 mem = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message CapacityInfo {
  uint32 max = 1;
  uint32 running = 2;
}
